feat: add localization for all elements in main and search results pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,38 @@
 {
-  "adult" : "adult"
+  "checkinDate" : "Check-in date",
+  "checkoutDate" : "Check-out date",
+  "adult" : "adult",
+  "adults" : "adults",
+  "children": "children",
+  "room" : "room",
+  "rooms" : "rooms",
+  "done" : "done",
+  "search": "search",
+  "filtersTitle" : "Filter by:",
+  "budgetFilterTitle" : "Your budget (per night)",
+  "reviewFilterTitle" : "Review score",
+  "exceptional" : "Exceptional",
+  "fabulous" : "Fabulous",
+  "superb" : "Superb",
+  "veryGood" : "Very good",
+  "good" : "Good",
+  "pleasant" : "Pleasant",
+  "distanceFilterTitle" : "Distance from the center",
+  "lessThan" : "Less than",
+  "km" : "km",
+  "searchResultText" : "hotels found",
+  "emptyResultTitle" : "No properties found in",
+  "emptyResultText" : "There are no matching properties for your search criteria. Try updating your search.",
+  "fetchErrorText": "Something went wrong. Try again later",
+  "sortBy" : "Sort by",
+  "defaultSortName" : "Default",
+  "priceLowFirstSortName" : "Price (Low to High)",
+  "priceHighFirstSortName" : "Price (High to Low)",
+  "ratingLowFirstSortName" : "Rating (High to Low)",
+  "ratingHighFirstSortName" : "Rating (Low to High)",
+  "priceFrom" : "from",
+  "perNight" : "per night",
+  "fromCenter" : "from the center",
+  "checkin" : "Check-in",
+  "checkout" : "Check-out"
 }
