--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,38 @@
 {
-  "adult" : "взрослый"
+  "checkinDate" : "Дата заезда",
+  "checkoutDate" : "Дата выезда",
+  "adult" : "взрослый",
+  "adults" : "взрослых",
+  "children" : "детей",
+  "room" : "номер",
+  "rooms" : "номера",
+  "done" : "готово",
+  "search" : "найти",
+  "filtersTitle" : "Все фильтры",
+  "budgetFilterTitle" : "Ваш бюджет (за ночь)",
+  "reviewFilterTitle" : "Оценка по отзывам",
+  "exceptional" : "Великолепно",
+  "fabulous" : "Потрясающе",
+  "superb" : "Превосходно",
+  "veryGood" : "Очень хорошо",
+  "good" : "Хорошо",
+  "pleasant" : "Достаточно хорошо",
+  "distanceFilterTitle" : "Расстояние от центра",
+  "lessThan" : "Меньше",
+  "km" : "км",
+  "searchResultText" : "отелей найдено",
+  "emptyResultTitle" : "Ничего не найдено в",
+  "emptyResultText" : "Мы не нашли вариантов жилья по вашим критериям поиска. Попробуйте их изменить.",
+  "fetchErrorText" : "Что-то пошло не так. Попробуйте еще раз позже",
+  "sortBy" : "Сортирвоать",
+  "defaultSortName" : "Наши рекомендации",
+  "priceLowFirstSortName" : "Цена (сначала самая низкая)",
+  "priceHighFirstSortName" : "Цена (сначала самая выоская)",
+  "ratingLowFirstSortName" : "Рейтинг (сначала самый высокий)",
+  "ratingHighFirstSortName" : "Рейтинг (сначала самый низкий)",
+  "priceFrom" : "от",
+  "perNight" : "за ночь",
+  "fromCenter" : "от центра",
+  "checkin" : "Заезд",
+  "checkout" : "Выезд"
 }
