feat: add lost words translation and change i18n main file path

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -50,5 +50,7 @@
   "pickRoom" : "Pick a room",
   "rating" : "Rating",
   "reviewFormSubmit" : "Send",
-  "successBookText" : "You have successfully booked a hotel!"
+  "successBookText" : "You have successfully booked a hotel!",
+  "cityInputPlaceholder" : "Where are you going?",
+  "reviews" : "reviews"
 }
