--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -73,5 +73,6 @@
   "Cancel": "Отменить",
   "SureToCancel": "Вы уверены что хотите отменить бронь?",
   "Yes": "Да",
-  "No": "Нет"
+  "No": "Нет",
+  "alreadyBooked": "Уже Забронирован"
 }
